<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:focusableInTouchMode="true">


            <!-- The primary full-screen view. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="@string/from" />

                <AutoCompleteTextView
                    android:id="@+id/location_from"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/departure_loc"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:nextFocusForward="@+id/location_to"
                    android:padding="5dp"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="@string/to" />

                <!-- actionDone ime options to close keyboard after enter is pressed - https://stackoverflow.com/questions/23251605/hidding-keyboard-after-enter-key-is-pressed -->
                <AutoCompleteTextView
                    android:id="@+id/location_to"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:hint="@string/holiday_loc"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="24sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="@string/trip_availability" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/trip_date_min"
                        android:layout_width="0dp"
                        android:layout_height="43dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/dep_date"
                        android:inputType="date"
                        android:padding="5dp"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/trip_date_max"
                        android:layout_width="0dp"
                        android:layout_height="43dp"
                        android:layout_marginLeft="24dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/return_date"
                        android:inputType="date"
                        android:padding="5dp"
                        android:textSize="20sp" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="@string/dep_day" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn0"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/mon" />

                    <Button
                        android:id="@+id/btn1"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/tue" />

                    <Button
                        android:id="@+id/btn2"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/wed" />

                    <Button
                        android:id="@+id/btn3"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/thu" />

                    <Button
                        android:id="@+id/btn4"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fri" />

                    <Button
                        android:id="@+id/btn5"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sat" />

                    <Button
                        android:id="@+id/btn6"
                        style="@style/MyButtonStyleSmall"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sun" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:text="@string/days_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/days_in"
                        android:layout_width="0dp"
                        android:layout_height="43dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:hint="@string/d_in_hint"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:padding="5dp"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/one_way"
                        android:layout_width="0dp"
                        android:layout_height="43dp"
                        android:layout_marginLeft="24dp"
                        android:layout_weight="1"
                        android:text="@string/one_way"
                        android:textSize="20sp" />

                </LinearLayout>


                <ImageView
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/cirle_button"
                    android:focusable="true"
                    android:src="@drawable/ic_filter_list_black_24dp" />


            </LinearLayout>


            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent"
                android:focusable="true"
                android:text="@string/search_button"
                android:textColor="@android:color/white"
                android:textSize="34sp" />


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/activity_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@mipmap/travel" />

        <TextView
            android:id="@+id/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="175dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/no_internet" />

    </RelativeLayout>

</RelativeLayout>